tests/sources/invalid/classes/static_and_type_method_errors.fire
// Static-method and Type.method() call errors: calling a static method on
// an instance, calling an unknown type-level method, and an argument-count
// mismatch on a real static method.
class Foo {
    v: int32;

    fn Foo(v: int32) {
        this.v = v;
    }

    static fn make() -> int32 {
        return 1;
    }

    static fn makeWith(x: int32) -> int32 {
        return x;
    }
}

fn callStaticOnInstance() -> int32 {
    f: Foo = Foo(1);
    x: int32 = f.make();  //~ ERROR FS-SEM-0010 @18
    return x;
}

fn unknownTypeMethod() -> int32 {
    y: int32 = Foo.nope();  //~ ERROR FS-SEM-0010 @20
    return y;
}

fn typeMethodArgCountMismatch() -> int32 {
    y: int32 = Foo.makeWith();  //~ ERROR FS-SEM-0010 @20
    return y;
}

fn main() -> int32 {
    wrongTypeArg: bool = true;
    y: int32 = Foo.makeWith(wrongTypeArg);  //~ ERROR FS-SEM-0010 @29
    return 0;
}
